--- a/index.html
+++ b/index.html
@@ -9,15 +9,45 @@
         min-height: 100%;
         margin: 0;
         padding: 0;
-        font: Arial 14px;
+        font-family: Arial;
+        background-color: black;
       }
+      
+      h1 { 
+        font-size: 40px;
+        animation-name: colorchange;
+        animation-duration: 5s;
+        animation-iteration-count: infinite;
+      }
+      
+      @keyframes colorchange {
+    0% {
+        color: rgb(31, 102, 255);
+    }
+ 
+    25% {
+        color: rgb(31, 184, 255);
+    }
+ 
+    50% {
+        color: rgb(31, 255, 132);
+    }
+ 
+    75% {
+        color: rgb(31, 184, 255);
+    }
+ 
+    100% {
+        color: rgb(31, 102, 255);
+    }
+}
     </style>
 
   </head>
   <body>
     <center>
       <h1>
-      Welcome!
+      rayman.io
       </h1>
     </center>
   </body>
