--- a/index.html
+++ b/index.html
@@ -3,47 +3,9 @@
   <head>
     <meta name="viewport" content="width=320, initial-scale=1">
     <meta charset="utf-8">
-    <style>
-      body, html {
-        min-width: 100%;
-        min-height: 100%;
-        margin: 0;
-        padding: 0;
-        font-family: Arial;
-        background-color: black;
-      }
-      
-      h1 { 
-        font-size: 40px;
-        animation-name: colorchange;
-        animation-duration: 5s;
-        animation-iteration-count: infinite;
-      }
-      
-      @keyframes colorchange {
-    0% {
-        color: rgb(31, 102, 255);
-    }
- 
-    25% {
-        color: rgb(31, 184, 255);
-    }
- 
-    50% {
-        color: rgb(31, 255, 132);
-    }
- 
-    75% {
-        color: rgb(31, 184, 255);
-    }
- 
-    100% {
-        color: rgb(31, 102, 255);
-    }
-}
-    </style>
-
+    <link rel="stylesheet" href="styles.css">
   </head>
+
   <body>
     <center>
       <h1>
