--- a/index.html
+++ b/index.html
@@ -5,12 +5,13 @@
     <meta charset="utf-8">
     <link rel="stylesheet" href="styles.css">
   </head>
-
   <body>
-    <center>
-      <h1>
-      rayman.io
-      </h1>
+    <center> 
+        <a id="title" href="https://github.com/raymanio">rayman.io</a>
+      
+      <div class="footer">
+        This Site Was Hosted With <a href="https://pages.github.com/">Github Pages</a>
+      </div>
     </center>
   </body>
 </html>
